# WaveFoldSynth

./: CMakeLists.txt  README.md
resource/: Info.plist  editor.uidesc  win32resource.rc
source/: Voice.cpp  Voice.h  WaveFoldSynth.cpp  WaveFoldSynthCIDs.h  WaveFoldSynthController.cpp  WaveFoldSynthController.h  WaveFoldSynthProcessor.cpp  WaveFoldSynthProcessor.h  version.h
